--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.show_sql=true
 ## RabbitMQ 설정
 multiplication.exchange=multiplication_exchange
 multiplication.solved.key=multiplication.solved
+
+# 서비스 디스커버리 설정
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
